# PROYECTO-FINAL-IA

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  environment.yml  pyproject.toml  requirements.txt
backend/configs/: data.yaml  model_cnn.yaml  model_lstm.yaml  preprocessing.yaml  runtime.yaml
backend/data/manifests/: corpus.csv
backend/data/splits/: test.csv  train.csv  val.csv
backend/models/cnn_base/: config.yaml  history.json  model.pt  test_metrics.json  top_errors_test.json  val_metrics.json
backend/scripts/: audit_corpus.py  augment_offline.py  generate_splits.py  import_audios.py  predemo_checklist.py
backend/scripts/extra/: generate_mock_corpus.py
backend/src/api/: main.py  schemas.py  state.py  websocket.py
backend/src/audio/: augmentation.py  buffer.py  capture.py  features.py  live_runner.py  normalization.py  vad.py
backend/src/cli/: evaluate.py  live.py  record.py  record_ambient.py  record_session.py  train.py
backend/src/domain/: commands.py  exceptions.py  interfaces.py  prediction.py
backend/src/hardware/: arduino_actuator.py  command_protocol.py  serial_link.py
backend/src/inference/: benchmark.py  decision.py  pipeline.py  predictor.py
backend/src/models/: base.py  cnn.py  factory.py  lstm.py
backend/src/training/: callbacks.py  dataloader.py  dataset.py  metrics.py  scheduler.py  trainer.py
backend/src/utils/: config_loader.py  logger.py  seed.py  (+1 more)
backend/tests/: test_audio_features.py  test_command_protocol.py  test_decision.py  test_vad.py
(+61 files in other folders)
